First commited as before_109952_rev1